--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
-/* ========== style.css ========== */
+/* ========== style.scss ========== */
 @charset "UTF-8";
 
 // @import "compass";
 
 @import 'ini/ini';
+@import 'index/index'
