--- a/scss/ini/_fonts.scss
+++ b/scss/ini/_fonts.scss
@@ -126,7 +126,7 @@
 // font-family setup
 $font-family: 'Roboto Slab', 'Lato', 'Avenir', "Noto Sans JP", "Noto Sans CJK JP", "游ゴシック", "Yu Gothic", YuGothic, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", 'Roboto', SegoeUI, 'Segoe UI', Verdana, "メイリオ", Meiryo, 'Ubuntu', 'Droid Sans', sans-serif;
 
-$mono-font-family: 'Fira Code', 'SF Mono Regular', 'Roboto mono', 'Source Code Pro', Menlo, "Noto Sans Mono CJK JP",  monospaced;
+$mono-font-family: 'OCRB', 'Fira Code', 'SF Mono Regular', 'Roboto mono', 'Source Code Pro', Menlo, "Noto Sans Mono CJK JP",  monospaced;
 
 $font-Gothic-title: 'Product Sans', 'Roboto', 'Avenir', 'Helvetica Neue', 'Arial', "Noto Sans JP", "Noto Sans CJK JP", sans-serif;
 
