--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -1,6 +1,6 @@
 /* ========== index.scss ========== */
 
-p {
+.m1 p {
   color: transparent;
   background-image: -webkit-linear-gradient(right, #777dff 0px, #f154ff 200px, #f0357c 400px),-webkit-linear-gradient(left, #777dff 0px, #497ce2 200px, #37bdde 400px);
   background-image: linear-gradient(to left, #777dff 0px, #f154ff 200px, #f0357c 400px),linear-gradient(to right, #777dff 0px, #497ce2 200px, #37bdde 400px);
