--- a/scss/ini/_var-color.scss
+++ b/scss/ini/_var-color.scss
@@ -1,4 +1,5 @@
 /* color setup */
+/*
 $agrista_color: #0E877B;
 $dot_menu_color_1: #E57373;
 $dot_menu_color_2: #FFD54F;
@@ -19,6 +20,7 @@ $color-news: #4776AF;
 $color-io: #4688F1;
 $color-activities: #E7828C;
 $color-marulog: #8E6E63;
+*/
 
 /*
 $front-items-about: #;
