--- a/scss/ini/_var.scss
+++ b/scss/ini/_var.scss
@@ -1,7 +1,9 @@
 /* var dir */
+/*
 $theme_dir: "https://agrista.jp/wp-content/themes/Agrista";
 $assets_dir: "#{$theme_dir}/assets";
 $images_dir: "#{$assets_dir}/images";
 
 $images-hero: "#{$images_dir}/hero";
 $images-i: "#{$images_dir}/icons/i";
+*/
