--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -52,12 +52,12 @@ body {
 }
 
 a {
-  color: $agrista_color;
+  color: #4688F1;
   text-decoration: none;
 }
 
 a:hover {
-  color: $agrista_color;
+  color: #4688F1;
   text-decoration: none;
 }
 
