--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -1,6 +1,6 @@
 /* ========== defaults.scss ========== */
 html {
-  font: 400 16px/12px $font-family;
+  font: 400 62.5%/12px $font-family;
   scroll-behavior: smooth;
 }
 
