--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -4,7 +4,23 @@
   text-align: center;
 }
 
-.m1 p {
+.section-header {
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.section-header > h2 {
+  color: #e6b125;
+  margin: 0 auto;
+  padding: 10em;
+}
+
+.section-header > .c2 {
+  font-size: 0.8rem;
+  padding: 2rem;;
+}
+
+.colorful {
   color: transparent;
   background-image: -webkit-linear-gradient(right, #777dff 0px, #f154ff 200px, #f0357c 400px),-webkit-linear-gradient(left, #777dff 0px, #497ce2 200px, #37bdde 400px);
   background-image: linear-gradient(to left, #777dff 0px, #f154ff 200px, #f0357c 400px),linear-gradient(to right, #777dff 0px, #497ce2 200px, #37bdde 400px);
