--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -9,13 +9,13 @@
   padding: 1rem;
 }
 
-.section-header > h2 {
+.section-header h2 {
   color: #e6b125;
   margin: 0 auto;
   padding: 10em;
 }
 
-.section-header > .c2 {
+.section-header .c2 {
   font-size: 0.8rem;
   padding: 2rem;;
 }
@@ -30,7 +30,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   padding-bottom: 6px;
-  font-size: 54px;
+  font-size: 48rem;
   line-height: 1.48164;
   font-weight: 700;
   letter-spacing: -.015em;
