--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -52,11 +52,19 @@ body {
 }
 
 a {
-  color: #4688F1;
+  color: transparent;
+  background-image: -webkit-linear-gradient(right, #777dff 0px, #f154ff 200px, #f0357c 400px),-webkit-linear-gradient(left, #777dff 0px, #497ce2 200px, #37bdde 400px);
+  background-image: linear-gradient(to left, #777dff 0px, #f154ff 200px, #f0357c 400px),linear-gradient(to right, #777dff 0px, #497ce2 200px, #37bdde 400px);
+  background-size: 50% 100%;
+  background-position: top left, top right;
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
+  cursor: pointer;
   color: #4688F1;
   text-decoration: none;
 }
