--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -12,11 +12,11 @@
 .section-header h2 {
   color: #e6b125;
   margin: 0 auto;
-  padding: 10em;
+  padding: 1rem;
 }
 
 .section-header .c2 {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   padding: 2rem;;
 }
 
