--- a/scss/ini/_appearance.scss
+++ b/scss/ini/_appearance.scss
@@ -12,14 +12,15 @@
   }
 
   h3 {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 90%;
-    height: 4px;
-    background: repeating-linear-gradient(45deg, #eb7a77, #eb7a77 2px, #FEF4E2 2px, #FEF4E2 4px);
-
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 90%;
+      height: 4px;
+      background: repeating-linear-gradient(45deg, #eb7a77, #eb7a77 2px, #FEF4E2 2px, #FEF4E2 4px);
+    }
   }
 
 }
