CSS「appearance」追加

--- a/scss/ini/_appearance.scss
+++ b/scss/ini/_appearance.scss
@@ -22,5 +22,14 @@
       background: repeating-linear-gradient(45deg, #eb7a77, #eb7a77 2px, #FEF4E2 2px, #FEF4E2 4px);
     }
   }
+}
 
+.inner {
+  margin: 0 auto 6.4vh auto;
+  padding: 1.6vh 0;
+}
+
+.inner section {
+  margin: 0 auto 3.2vh auto;
+  padding: 0.8vh 0;
 }
