--- a/scss/map/_map.scss
+++ b/scss/map/_map.scss
@@ -2,4 +2,28 @@
   width: 100%;
   height: 70vh;
   margin: 8vh auto;
+
+  .gm-style .gm-style-iw-c {
+    background: linear-gradient(to top, #f4e1e8 0%, #f4e1e8 11.1%, #f5e2e9 20.2%, #f5e4e9 27.7%, #f6e5ea 33.8%, #f7e7eb 38.8%, #f8eaed 43.1%, #f9ecee 47%, #faefef 50.8%, #fbf1f1 54.7%, #fcf3f2 59.2%, #fdf5f3 64.5%, #fef7f4 70.9%, #fef8f4 78.7%, #fff9f5 88.3%, #fff9f5 100%);
+  }
+
+  .node-pkg {
+    position: relative;
+    margin: 0.4rem 1rem;
+  }
+
+  .txt-name {
+    font-size: 1.6rem;
+    font-weight: bold;
+
+    &::before {
+      content: attr(data-en);
+      text-align: center;
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+      margin: 0 auto;
+    }
+  }
 }
