--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   border: none;
+  background-color: #f6f6f4;
   color: #525252;
   font-size: 12px;
   -webkit-text-size-adjust: 100%;
@@ -81,7 +82,6 @@ b {
   background-position: top left, top right;
   background-repeat: no-repeat;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   text-decoration: none;
 }
 
@@ -105,7 +105,6 @@ abbr span {
 }
 
 .clear { clear: both;
-
   &:before { clear: both; }
 }
 
@@ -136,23 +135,6 @@ body a {
   transition: all 0.1s ease-in-out;
 }
 
-#infinite-handle span,
-.archive-nav a,
-.comment-form input,
-.comment-form textarea,
-.featured-media a img,
-.post-content input[type="submit"],
-.post-content input[type="reset"],
-.post-content input[type="button"],
-.to-the-top,
-.post-title a {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
 
 /* Structure */
 .section { position: relative; }
@@ -168,106 +150,6 @@ body a {
     margin: 0 auto;
     padding: 8px;
   }
-}
-
-/* Buttons */
-.post-content input[type="submit"],
-.post-content input[type="reset"],
-.post-content input[type="button"],
-.comment-form input[type="submit"] {
-  display: inline-block;
-  padding: 16px 20px 15px;
-  border-radius: 3px;
-  border: none;
-  background: #0E877B;
-  font-size: 0.9em;
-  line-height: 1;
-  font-weight: 200;
-  color: #fff;
-  -webkit-appearance: none;
-}
-
-.post-content input[type="submit"] + input[type="reset"],
-.post-content input[type="submit"] + input[type="reset"],
-.post-content input[type="reset"] + input[type="submit"],
-.post-content input[type="reset"] + input[type="button"],
-.post-content input[type="button"] + input[type="button"],
-.post-content input[type="button"] + input[type="reset"],
-.post-content input[type="button"] + input[type="submit"] {
-  margin-left: 8px;
-}
-
-.post-content input[type="submit"]:hover,
-.post-content input[type="reset"]:hover,
-.post-content input[type="button"]:hover,
-.comment-form input[type="submit"]:hover {
-  cursor: pointer;
-  color: #fff;
-}
-/* basic setup */
-/* 5.	Blog ( Contents ) */
-.post {
-  position: relative;
-}
-
-.infinite-wrap,
-.post + .post {
-  margin-top: 80px;
-}
-
-
-/* Featured Media */
-.featured-media {
-  margin: 16px auto;
-}
-
-.posts .featured-media {
-  margin-bottom: 30px;
-}
-
-.featured-media a {
-  display: block;
-}
-
-.featured-media img {
-  padding: 2% 5%;
-  margin: 0 auto;
-  display: block;
-  border-radius: 3px;
-}
-
-
-/* Page Links */
-.page-links {
-  display: inline-block;
-  background: #eaeaea;
-  border-radius: 3px;
-  margin-top: 40px;
-  overflow: hidden;
-  font-size: 0.9em;
-}
-
-.page-links > a,
-.page-links > span {
-  display: inline-block;
-  padding: 18px 20px;
-  border-left: 1px solid #dadada;
-  font-weight: 500;
-  color: #757575;
-}
-
-.page-links span.title {
-  border-left: 0;
-  background: none;
-}
-
-.page-links > span {
-  background: #dadada;
-}
-
-.page-links a:hover {
-  background: #0E877B;
-  color: #fff;
 }
 
 
@@ -308,4 +190,17 @@ header, main, footer {
 
 ::-moz-selection {
   background: #dbecf0;
+}
+
+._blank {
+  display: block;
+}
+
+button {
+  background: none;
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
