--- a/scss/ini/_appearance.scss
+++ b/scss/ini/_appearance.scss
@@ -1,14 +1,27 @@
 .inner {
   h2 {
-    &::after {
+    margin-bottom: calc(3rem + 1.2vh);
+  }
+
+  h2 {
+    &::before, &::after {
       content: "";
       position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 4px;
+      top: 50%;
+      display: inline-block;
+      width: 16%;
+      height: 0.4rem;
       background: repeating-linear-gradient(-45deg, #F0BF59, #F0BF59 2px, #FEF4E2 2px, #FEF4E2 4px);
     }
+
+    &::before {
+      left: 8%;
+    }
+
+     &::after {
+       right: 8%;
+     }
+
   }
 
   h3 {
@@ -25,8 +38,8 @@
 }
 
 .inner {
-  margin: 0 auto 6.4vh auto;
-  padding: 1.6vh 0;
+  margin: 4.8vh auto;
+  padding: 3.6vh 0;
 }
 
 .inner section {
