--- a/scss/ini/_fonts.scss
+++ b/scss/ini/_fonts.scss
@@ -10,6 +10,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@400;500;700&display=swap');
+
 
 // font-family setup
 $font-family: 'Roboto Slab', 'Lato', 'Avenir', "Noto Sans JP", "Noto Sans CJK JP", "游ゴシック", "Yu Gothic", YuGothic, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", 'Roboto', SegoeUI, 'Segoe UI', Verdana, "メイリオ", Meiryo, 'Ubuntu', 'Droid Sans', sans-serif;
