--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -18,7 +18,7 @@
 
 .section-header .c2 {
   font-size: 1.2rem;
-  padding: 2rem;;
+  padding: 2rem;
 }
 
 .colorful {
@@ -30,4 +30,25 @@
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+
+#icon {
+  display: block;
+  background-color: #FFFFFF;
+  background-image: url("/assets/img/Fumi_icon/JPG");
+  height: 80%;
+  width: 80%;
+}
+
+.bio {
+
+}
+
+.permlink {
+  ul, li {
+    list-style: none;
+    margin: 0 0 2rem 0;
+    padding: 8px;
+  }
 }
