--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -4,13 +4,17 @@ html {
   scroll-behavior: smooth;
   background-color: #f6f6f4;
   color: #525252;
+  height: 100%;
+  width: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
   border: none;
-  font-size: 12px;
+  font-size: 16px;
   -webkit-text-size-adjust: 100%;
   letter-spacing: 1.5px;
   -webkit-font-smoothing: antialiased;
