--- a/style.css
+++ b/style.css
@@ -191,13 +191,17 @@ html {
   scroll-behavior: smooth;
   background-color: #f6f6f4;
   color: #525252;
+  height: 100%;
+  width: 100%;
 }
 
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
   border: none;
-  font-size: 12px;
+  font-size: 16px;
   -webkit-text-size-adjust: 100%;
   letter-spacing: 1.5px;
   -webkit-font-smoothing: antialiased;
@@ -516,6 +520,20 @@ h3 {
   background-repeat: no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+#icon {
+  display: block;
+  background-color: #FFFFFF;
+  background-image: url("/assets/img/Fumi_icon/JPG");
+  height: 80%;
+  width: 80%;
+}
+
+.permlink ul, .permlink li {
+  list-style: none;
+  margin: 0 0 2rem 0;
+  padding: 8px;
 }
 
 #map {
