構成見直し

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ h3 {
 #icon {
   display: block;
   background-color: #FFFFFF;
-  background-image: url("/assets/img/Fumi_icon/JPG");
+  background-image: url("/assets/img/Fumi_icon.JPG");
   height: 80%;
   width: 80%;
 }
