--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -35,10 +35,15 @@
 
 #icon {
   display: block;
-  background-color: #FFFFFF;
-  background-image: url("/assets/img/Fumi_icon/JPG");
-  height: 80%;
-  width: 80%;
+  background-color: transparent;
+  background-image: url("/assets/img/Fumi_icon.JPG");
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 500px;
+  width: 500px;
+  margin: 0 auto;
+
 }
 
 .bio {
@@ -46,7 +51,7 @@
 }
 
 .permlink {
-  ul, li {
+  li {
     list-style: none;
     margin: 0 0 2rem 0;
     padding: 8px;
