--- a/style.css
+++ b/style.css
@@ -524,13 +524,17 @@ h3 {
 
 #icon {
   display: block;
-  background-color: #FFFFFF;
+  background-color: transparent;
   background-image: url("/assets/img/Fumi_icon.JPG");
-  height: 80%;
-  width: 80%;
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 500px;
+  width: 500px;
+  margin: 0 auto;
 }
 
-.permlink ul, .permlink li {
+.permlink li {
   list-style: none;
   margin: 0 0 2rem 0;
   padding: 8px;
