--- a/scss/ini/_defaults.scss
+++ b/scss/ini/_defaults.scss
@@ -1,6 +1,6 @@
 /* ========== defaults.scss ========== */
 html {
-  font: 400 62.5%/16px $font-family;
+  font: 400 100% $font-family;
   scroll-behavior: smooth;
   background-color: #f6f6f4;
   color: #525252;
@@ -65,7 +65,6 @@ a {
   display: inline-block;
   position: relative;
   color: #cf1c47;
-  padding: 0.4rem;
   transition: 0.3s;
 
   &:hover {
@@ -228,4 +227,11 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+img.emoji {
+  height: 1em;
+  width: 1em;
+  margin: 0 .05em 0 .1em;
+  vertical-align: -0.1em;
 }
