--- a/scss/ini/_fonts.scss
+++ b/scss/ini/_fonts.scss
@@ -14,7 +14,7 @@
 
 
 // font-family setup
-$font-family: 'Roboto Slab', 'Lato', 'Avenir', "Noto Sans JP", "Noto Sans CJK JP", "游ゴシック", "Yu Gothic", YuGothic, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", 'Roboto', SegoeUI, 'Segoe UI', Verdana, "メイリオ", Meiryo, 'Ubuntu', 'Droid Sans', sans-serif;
+$font-family: 'Lato', 'Avenir', "Noto Sans JP", "Noto Sans CJK JP", "游ゴシック", "Yu Gothic", YuGothic, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", 'Roboto', SegoeUI, 'Segoe UI', Verdana, "メイリオ", Meiryo, 'Ubuntu', 'Droid Sans', sans-serif;
 
 $mono-font-family: 'OCRB', 'Fira Code', 'SF Mono Regular', 'Roboto mono', 'Source Code Pro', Menlo, "Noto Sans Mono CJK JP",  monospaced;
 
