--- a/scss/ini/_appearance.scss
+++ b/scss/ini/_appearance.scss
@@ -37,6 +37,7 @@
   }
 }
 
+/*
 .inner {
   margin: 4.8vh auto;
   padding: 3.6vh 0;
@@ -46,3 +47,5 @@
   margin: 0 auto 3.2vh auto;
   padding: 0.8vh 0;
 }
+
+*/
