--- a/scss/ini/_appearance.scss
+++ b/scss/ini/_appearance.scss
@@ -1,6 +1,7 @@
 .inner {
   h2 {
     margin-bottom: calc(3rem + 1.2vh);
+    font-size: 2rem;
   }
 
   h2 {
@@ -24,7 +25,7 @@
 
   }
 
-  h3 {
+  /* h3 {
     &::after {
       content: "";
       position: absolute;
@@ -34,7 +35,7 @@
       height: 4px;
       background: repeating-linear-gradient(45deg, #eb7a77, #eb7a77 2px, #FEF4E2 2px, #FEF4E2 4px);
     }
-  }
+  } */
 }
 
 /*
