--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -59,10 +59,13 @@
   margin: calc(100vh/100) auto;
 }
 
+.face {
+  margin-bottom: calc(100vh/10);
+}
+
 .bio {
   h1 {
     font-size: calc(2rem + 4px);
-    text-align: left;
   }
 
   p {
