--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -56,7 +56,7 @@
 }
 
 .inner {
-  margin: calc(100vh/100) auto;
+  margin-bottom: calc(100vh/80) auto;
 }
 
 .face {
@@ -64,10 +64,6 @@
 }
 
 .bio {
-  h1 {
-    font-size: calc(2rem + 4px);
-  }
-
   p {
     line-height: 1.6rem;
   }
@@ -80,6 +76,21 @@
   }
 }
 
+.works {
+  h3 {
+    font-size: 2rem;
+  }
+}
+
 .box {
-  margin-bottom: calc(100vh/80);
+  margin-bottom: calc(100vh/70);
+}
+
+
+.svg-musicwave {
+  svg {
+    width: 10%;
+    display: block;
+    margin: 0 auto;
+  }
 }
