--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -77,10 +77,16 @@
     justify-content: center;
   }
 
-    li {
+  li {
+    height: 4rem;
     width: 30%;
     list-style: none;
     text-align: center;
+
+    a {
+      height: 100%;
+      width: 100%;
+    }
   }
 
   @media screen and (max-width: 768px) {
@@ -97,6 +103,7 @@
 
 .works {
   h3 {
+    margin-bottom: 0.8rem;
     font-size: calc(2rem - 8px);
     color: #848484;
     text-align: right;
