--- a/scss/index/index.scss
+++ b/scss/index/index.scss
@@ -25,7 +25,7 @@
   color: transparent;
   background-image: -webkit-linear-gradient(right, #777dff 0px, #f154ff 200px, #f0357c 400px),-webkit-linear-gradient(left, #777dff 0px, #497ce2 200px, #37bdde 400px);
   background-image: linear-gradient(to left, #777dff 0px, #f154ff 200px, #f0357c 400px),linear-gradient(to right, #777dff 0px, #497ce2 200px, #37bdde 400px);
-  background-size: 50% 100%;
+  background-size: 100% 100%;
   background-position: top left, top right;
   background-repeat: no-repeat;
   -webkit-background-clip: text;
@@ -62,6 +62,10 @@
 
 .face {
   margin-bottom: calc(100vh/10);
+
+  .small {
+    font-size: 70%;
+  }
 }
 
 .bio {
